--- a/password-generator/package.json
+++ b/password-generator/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/victorspt/passwordgenerator/issues"
   },
-  "homepage": "https://github.com/victorspt/passwordgenerator#readme"
+  "homepage": "https://github.com/victorspt/passwordgenerator#readme",
+  "devDependencies": {
+    "prettier": "^3.0.3"
+  }
 }
