feat: add CLI executable and command name
Added a CLI executable file to be used with the command name "pwgen".

--- a/password-generator/package.json
+++ b/password-generator/package.json
@@ -3,6 +3,9 @@
   "version": "0.2.0",
   "description": "A tool for generating random passwords with customizable settings.",
   "main": "index.js",
+  "bin": {
+    "pwgen": "./bin/pwgen.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
